syntax = "proto3";

package quutio.bouncer;

option csharp_namespace = "Bouncer.Grpc";
option java_package = "io.quut.bouncer.grpc";
option java_multiple_files = true;

message ServerData {
	string name = 1;
	string group = 2;
	string type = 3;

	string host = 4;
	int32 port = 5;
}

message ServerStatus {
	oneof players {
		PlayerList playerList = 1;
		PlayerListHumanReadable playerListHumanReadable = 2;
		int32 playerCount = 3;
	}
	optional int32 tps = 4;
	optional int32 memory = 5;
	optional int32 maxMemory = 6;
}

message PlayerList {
	repeated bytes players = 1;
}

message PlayerListHumanReadable {
	repeated string players = 1;
}

message ServerDetails {
	int32 serverId = 1;
	ServerData data = 2;
	ServerStatus status = 3;
}

message ServerStatusUpdate {
	repeated bytes playersJoined = 1;
	repeated bytes playersLeft = 2;
	optional int32 playerCount = 3;
	optional int32 tps = 4;
	optional int32 memory = 5;
}

message ServerFilter {
	bool inverse = 4;
	oneof condition {
		Name name = 1;
		Group group = 2;
		Type type = 3;
	}

	message Name {
		string value = 1;
	}

	message Group {
		string value = 1;
	}

	message Type {
		string value = 1;
	}
}

message ServerSort {
	oneof sort {
		ByPlayerCount byPlayerCount = 1;
	}

	message ByPlayerCount {
		Order value = 1;

		enum Order {
			DEFAULT = 0;
			ASCENDING = 1;
			DESCENDING = 2;
		}
	}
}

enum ServerRemovelReason {
	UNSPECIFIED = 0;
	UNREGISTRATION = 1;
	TIMEOUT = 2;
}
